--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <div class="x4">Pizza click x2 price: 2000 <button class="btn" id="clickx2">Buy</button></div>
         <div class="reset">Reset all price: 200000 <button class="btn" id="resetAll">Buy</button></div>
     </div>
+    <div class="pizza-clicks"></div>
 </body>
 <script src="scripts.js"></script>
 </html>
