--- a/rank/rank.html
+++ b/rank/rank.html
@@ -19,7 +19,7 @@
     </header>
 
     <div class="rankPizzas">
-        <p>Jogou meu jogo? Insira seu recorde aqui (seja honesto em!)</p>
+        <p>Jogou meu jogo? Insira seu recorde aqui (seja honesto em 👀!)</p>
         <input type="text" id="nickname" placeholder="nickname">
         <input type="number" id="score" placeholder="pizzas">
         <button onclick="addScore()">Adcionar</button>
